Bug 1092346 - At the end of a call the proper volume control channel is not restored in the dialer app. r=baku.